# historical-analysis-of-software-metrics

./: .gitignore  CITATION.cff  README.md  calculate_fanin_and_fanout.py  create-graphs.py  download-versions.py  generate-ck-metrics.py  generate-deps.py  generate-lcom-metrics.py  generate-sm-metrics.py  pyproject.toml  utils.py
graphs/: README.md
